# capstone-yuykim-pipet-physical-ai

./: .devlog.yml  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  STRUCTURE.md  history.md
.github/workflows/: publish-devlog.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: task_001.md  task_002.md  task_003.md  task_004.md  task_005.md  task_006.md  task_007.md  task_008.md  task_009.md  task_010.md  task_011.md  task_012.md  task_013.md  task_014.md  task_015.md  task_016.md  task_017.md  task_018.md  task_019.md  task_020.md  task_021.md  task_022.md  task_023.md  task_024.md  task_025.md  tasks.json
ToDokyung/: train_progress.webm
ai/: README.md  readme.md
ai/data_conversion/: make_grasp_focus_episodes.py
ai/data_conversion/npz_to_lerobot/: __init__.py  convert.py  indy7_tcp_fk.py
ai/diagnostics/: check_preprocess_alignment.py  offline_error_split.py
ai/indy7_lerobot/: README.md
ai/indy7_lerobot/scripts/: build_simple_lerobot_npz.py  check_npz_file.py  export_simple_npz_to_lerobot_v3.py
ai/lerobot/: __init__.py  installation.md  readme.md  run_lerobot_train.py  train_26_04_07.sh  train_26_04_20_half_data.sh
ai/lerobot/lerobot/: README.md
ai/lerobot_source/: readme.md
ai/lerobot_source/lerobot/: .gitignore
ai/logs/: inference_2026_05_11_grasp_focus_result.md  train_26_04_20_half_data_summary.md  trainlog.md
control_indy7/: readme.md
control_indy7/indy7/: indy7_keyboard_control_v1.py  move_home.py  restart.py
dev_diary/: 2026-04-02.md  2026-04-06.md  2026-04-07.md  2026-04-10.md  2026-04-20.md  2026-04-26.md  2026-04-27.md  2026-05-07.md  2026-05-09.md  2026-05-10.md  2026-05-12.md  2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-06-03.md
docs/: README.md  ai_architecture.md  architecture.md  data_collection_decisions.md  history.md  interface_spec.md  neuromeka_indydcp3_summary.md
docs/SirLab_publicLaptop/: SirLab_PublicLaptop_dev_environment.md  SirLab_PublicLaptop_dev_environment.md.md  setup_progress.md
docs/ai/: ai_architecture.md  lerobot_architecture.md  lerobot_setup.md  pipette_localization_recovery.md
docs/data_collect_env/: README.md
docs/mark7/: PRD.md  architecture.md  improvements.md  prev_architecture.md  status.md
mujoco_env/: README.md
mujoco_env/assets/mark7/: index_top_1.stl  ringer_bottom_1.stl
mujoco_env/indy7_urdf/Materials/: Default.mat  black.mat  blue.mat  brown.mat  green.mat  grey.mat  icon_green.mat  icon_grey.mat  indy_white.mat  metal.mat  metal_grey.mat  metal_white.mat  orange.mat  red.mat  white.mat
mujoco_env/models/: indy7.urdf  mark7_gripper.xacro
mujoco_env/scripts/: collect_dataset.py  keyboard_cartesian_teleop.py  prepare_models.py  run_viewer.py
ros2_ws/src/: README.md
ros2_ws/src/indy7_gripper_teleop/: CMakeLists.txt  README.md  README_KR.md  package.xml
ros2_ws/src/indy7_gripper_teleop/config/: data_collection_config.yaml  teaching_params.yaml
ros2_ws/src/indy7_gripper_teleop/indy7_gripper_teleop/: __init__.py  camera_data_logger.py  data_logger.py  direct_teaching_node.py  teaching_mode_manager.py
ros2_ws/src/indy7_gripper_teleop/launch/: direct_teaching.launch.py  direct_teaching_with_camera.launch.py  direct_teaching_with_driver.launch.py
ros2_ws/src/indy7_gripper_teleop/scripts/: teaching_control.py
ros2_ws/src/mark7/pipet_hand_mark7_description/: CMakeLists.txt  package.xml
ros2_ws/src/mark7/pipet_hand_mark7_description/meshes/: middle_bottom_1.stl  thumb_top_1.stl
ros2_ws/src/mark7/pipet_hand_mark7_description/urdf/: pipet_hand_mark7.gazebo  pipet_hand_mark7.xacro
ros2_ws/src/mark7/pipet_hand_mark7_driver/: CMakeLists.txt  mark7_hardware_plugin.xml  package.xml
ros2_ws/src/mark7/pipet_hand_mark7_driver/config/: grip_presets.yaml  mark7_controllers.yaml
ros2_ws/src/mark7/pipet_hand_mark7_driver/include/pipet_hand_mark7_driver/: mark7_rx_packet.hpp  mark7_system_hardware.hpp  mark7_tx_packet.hpp  serial_port.hpp
ros2_ws/src/mark7/pipet_hand_mark7_driver/launch/: mark7_hardware.launch.py
ros2_ws/src/mark7/pipet_hand_mark7_driver/src/: mark7_system_hardware.cpp  serial_port.cpp
ros2_ws/src/mark7/pipet_hand_mark7_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/mark7/pipet_hand_mark7_msgs/msg/: FingerState.msg  GripperStatus.msg
ros2_ws/src/mark7/pipet_hand_mark7_teleop/: package.xml  setup.cfg  setup.py
ros2_ws/src/mark7/pipet_hand_mark7_teleop/pipet_hand_mark7_teleop/: grip_preset_node.py  teleop_keyboard.py
ros2_ws/src/pipet_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/pipet_bringup/launch/: data_collection.launch.py  indy7_only.launch.py  inference.launch.py
ros2_ws/src/pipet_dagger_collection/: package.xml  setup.cfg  setup.py
ros2_ws/src/pipet_dagger_collection/launch/: dagger_collection.launch.py
ros2_ws/src/pipet_dagger_collection/pipet_dagger_collection/: dagger_supervisor_node.py
ros2_ws/src/pipet_data_collector/: package.xml  setup.cfg  setup.py
ros2_ws/src/pipet_data_collector/pipet_data_collector/: data_collector_node.py
ros2_ws/src/pipet_inference/: package.xml  setup.cfg  setup.py
ros2_ws/src/pipet_inference/pipet_inference/: inference_node.py  lerobot_act_backend.py  operator_gui.py  sidecar_zmq_client.py  virtual_episode_replay_node.py  zmq_act_server.py
ros2_ws/src/pipet_system_teleop/: package.xml  setup.cfg  setup.py
ros2_ws/src/pipet_system_teleop/pipet_system_teleop/: keyboard_servo_node.py  system_teleop_node.py  xbox_servo_node.py
run_scripts/: 00_env_ros.sh  10_data_collection_backend.sh  11_data_collection_teleop.sh  20_train_lerobot.sh  21_train_26_04_20_half_data.sh  22_train_mix_balanced_200.sh  23_train_overhead_depth_compare.sh  24_train_overhead_lr_cosine_compare.sh  25_train_overhead_fast.sh  30_mujoco_prepare.sh  31_mujoco_teleop.sh  32_mujoco_collect.sh  40_inference_ros.sh  41_operator_gui.sh  50_mark7_preset_test.sh  60_check_preprocess_alignment.sh  61_offline_error_split.sh  README.md
tools/control_indy7/indy7/: error.py  indy7_shutdown.py  indydcp3_example.ipynb  move_home.py  read_joint_state.py
(+112 files in other folders)
