<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>indy7_gripper_teleop</name>
  <version>1.0.0</version>
  <description>Direct teaching teleoperation and data collection for Indy7 robot</description>
  <maintainer email="sirlab@example.com">sirlab</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>indy_interfaces</depend>
  <depend>rosbag2_py</depend>

  <!-- Camera integration dependencies -->
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>

  <!-- RealSense camera (optional - only needed when using camera) -->
  <exec_depend>realsense2_camera</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
