<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipet_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for Pipet Physical AI system</description>
  <maintainer email="sirlab@todo.todo">SirLab</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>indy_driver</exec_depend>
  <exec_depend>indy_description</exec_depend>
  <exec_depend>pipet_hand_mark7_driver</exec_depend>
  <exec_depend>pipet_hand_mark7_description</exec_depend>
  <exec_depend>pipet_data_collector</exec_depend>
  <exec_depend>pipet_system_teleop</exec_depend>
  <exec_depend>pipet_inference</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
