<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipet_inference</name>
  <version>0.1.0</version>
  <description>Inference node for trained AI models (stub)</description>
  <maintainer email="sirlab@todo.todo">SirLab</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>python3-zmq</depend>
  <depend>indy_interfaces</depend>
  <exec_depend>python3-pyqt5</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
