<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipet_hand_mark7_driver</name>
  <version>0.1.0</version>
  <description>ROS2 driver package for Mand.ro Mark7 robot hand</description>
  <maintainer email="youenr119@gmail.com">youner119</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>pipet_hand_mark7_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
